fix [#29337] Duplicate long shapekey names crash Blender - added BLI_strncat_utf8. - ensure resulting strings are valid utf8.