source/blender/blenlib/BLI_string_utf8.h
@@ -32,6 +32,7 @@ extern "C" {
 #endif
 
 char        *BLI_strncpy_utf8(char *dst, const char *src, size_t maxncpy);
+char        *BLI_strncat_utf8(char *dst, const char *src, size_t maxncpy);
 int          BLI_utf8_invalid_byte(const char *str, int length);
 int          BLI_utf8_invalid_strip(char *str, int length);
 
